change min-height in fullscreen to avoid overlaps

--- a/static/main.css
+++ b/static/main.css
@@ -20,6 +20,7 @@ body {
 #fullscreen{
     background: white;
     height: 90vh;
+    min-height: 400px;
     width: 100%;
 }
 #controls{
